tests/errors/syn_class_var14.java
public class syn_class_var14 {
static String name ;
}